# ci_cd_test

./: README.md  docker-compose.yml
.github/workflows/: README.md  cd-deploy.yml  ci-api.yml  ci-docker-compose.yml  ci-ui.yml
api-project/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: Architecture & Deployment Design (Google Cloud) (1).docx  Architecture & Deployment Design (Google Cloud).docx  Architecture & Deployment Design (Google Cloud).md
frontend/test-project/: package.json
ui-project/: Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
