[project]
name = "api-project"
version = "0.1.0"
description = "FastAPI Hello World project"
requires-python = ">=3.14"
dependencies = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
